@@ -1,6 +1,0 @@
-dependencies {
-    compileOnly "javax.servlet:javax.servlet-api"
-
-    testCompile "junit:junit"
-    testCompile "org.mockito:mockito-core"
-}
