@@ -22,7 +22,6 @@ include 'repose-aggregator',
         'repose-aggregator:components:filters:destination-router-filter',
         'repose-aggregator:components:filters:echo-filter',
         'repose-aggregator:components:filters:exception-filter',
-        'repose-aggregator:components:filters:flush-output-filter',
         'repose-aggregator:components:filters:forwarded-proto-filter',
         'repose-aggregator:components:filters:header-normalization-filter',
         'repose-aggregator:components:filters:header-translation-filter',
